# lumenex

./: .clang-format  .gitignore  README.md  flake.nix  meson.build  meson_options.txt
docs/: README.md
include/lumenex/: export.h  language.h  lexer.h  token.h  version.h
nix/: formatter.nix
src/: language.c  lexer.c  token.c
src/languages/ada/: lexer.c  lexer.h
src/languages/c/: lexer.c  lexer.h
src/languages/cpp/: lexer.c  lexer.h
src/languages/cs/: lexer.c  lexer.h
src/languages/go/: lexer.c  lexer.h
src/languages/java/: lexer.c  lexer.h
src/languages/javascript/: lexer.c  lexer.h
src/languages/python/: lexer.c  lexer.h
src/languages/rust/: lexer.c  lexer.h
src/languages/typescript/: lexer.c  lexer.h
src/languages/zig/: lexer.c  lexer.h
tests/: language_test.c  meson.build
